# beginner.py-bot

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  base.Dockerfile  beginner.py  bot-compose.yaml  bot-manafest.yaml  bot.yaml  configure_ubuntu.sh  contestants.py  dev.Dockerfile  development.example.yaml  disallowed-prefixes.txt  k8s-deploy.yaml  postgres-manifest.yaml  production.yaml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
beginner/: __main__.py  allowed_modules.txt  beginner.py  bootstrap.py  brainfuck_runner.py  cog.py  colors.py  config.py  devcog.py  history_queue.py  kudos.py  logging.py  runner.py  scheduler.py  settings.py  snowflake.py  tags.py
beginner/cogs/: MinecraftConnections.py  admin.py  advent_of_code.py  buddy.py  bump.py  bumping.py  bumping_depricated.py  candidates.py  challenges.py  code_runner.py  fun.py  google.py  help.py  help_posts.py  help_rotator.py  kudos.py  moderation.py  monthly_showing_off.py  off_topic.py  onboarding.py  pip.py  prompt_luck.py  prompt_weather.py  python.py  python_backup.json  repeater.py  resources.py  role_assignment.py  rules.py  settings.py  spam.py  statistics.py  tips.py  user_roles.py
beginner/config/: enabled_builtins.json  enabled_modules.json  enabled_special_attributes.json
beginner/models/: __init__.py  _database.py  contestants.py  mod_actions.py  options.py  points.py  scheduler.py  settings.py
bot/: Dockerfile  bot.config  example_bot.config  pyproject.toml  requirements.txt
bot/beginner/: __main__.py  beginner.py  cog.py  devcog.py  exceptions.py  extension.py  kudos.py  options.py  scheduler.py
bot/beginner/cogs/: bumping.py  challenges.py  code_runner.py  google.py  help.py  moderation.py  onboarding.py  python.py  repeater.py  rules.py  spam.py  statistics.py  tips.py  user_roles.py
bot/beginner/models/: kudos.py  messages.py  online.py  points.py
cogs/: google.py  help.py  python.py  rules.json  rules.py
compose/: bot.yaml  postgres.yaml  site.yaml
data/: python.json  rules.json
extensions/: boosters.py  bot_commands_cleanup.py  bump_reminders.py  challenges.py  dm_monitor.py  donating.py  help_channels.py  info.py  lol_streak.py  member_counter.py  message_binding.py  minecraft.py  mods.py  new_members.py  online_counter.py  private_chat.py  setup_models.py  topical_roles.py  voice_chat.py
manifests/: bot-token.yaml  bot.yaml  postgres-password.yaml  postgres.yaml
site/: Dockerfile  pyproject.toml  requirements.txt
site/beginnerpy/: app.py  tags.py
(+34 files in other folders)
