[tool.poetry]
name = "beginner.py"
version = "0.0.41"
description = ""
authors = ["Zech Zimmerman <zechzimm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
peewee = "^3.13"
requests = "^2.22"
google = "^2.0"
google-api-python-client = "2.15.0"
numpy = "^1.19.0"
bevy = "^0.2.0"
pyyaml = "^5.3.1"
python-dateutil = "^2.8.1"
xmltodict = "^0.12.0"
black = "^20.8b1"
nextcord = "^2.0.0-alpha.2"
pytz = "^2021.1"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
