[tool.poetry]
name = "beginnerpy_site"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.13"

[tool.poetry.dev-dependencies]
starlette = "^0.13.0"
Hypercorn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
